fix body overflow

--- a/static/form.css
+++ b/static/form.css
@@ -1,6 +1,6 @@
-body {
+/*body {
   overflow: hidden;
-}
+}*/
 
 @media screen and (max-width: 960px) {
   .imgDiv {
